수납 화면 구현

--- a/websocketserver/views/header.html
+++ b/websocketserver/views/header.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="description" content="" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no" />
-	<title>키오스크</title>
+	<title>{{.Title}}</title>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/nanumgothiccoding.css" />
