불출 화면 구현

--- a/websocketserver/views/main.html
+++ b/websocketserver/views/main.html
@@ -16,7 +16,7 @@
                     <div class="sub-con-sec">
                         <div class="board-top-search" style="float: left">
                             <button class="btn-small" id="input_item_btn"><a href="input/regist_delivery">택배 입고</a></button>
-                            <button class="btn-small" id="output_item_btn"><a href="output/regist_owner">택배 찾기</a></button>
+                            <button class="btn-small" id="output_item_btn"><a href="output/regist_address">택배 찾기</a></button>
                         </div>
                     </div>
                 </div>
