--- a/websocketserver/views/header.html
+++ b/websocketserver/views/header.html
@@ -41,24 +41,142 @@
 	
 	<!-- 구글차트 -->
 	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-	
-	<script>
-	</script>
+
+    <script>
+        let conn;
+    
+        // 웹소켓 연결
+        window.onload = () => {
+            if (window['WebSocket']) {
+                conn = new WebSocket('ws://' + document.location.host + '/ws');
+                console.log("웹소켓 연결")
+                // 소켓 종료될 때
+                conn.onclose = evt => {
+                    let log = document.createElement('div');
+                    log.innerHTML = `<b>Connection closed.</b>`;
+                    logMessage(log)
+                };
+    
+                // 메시지 수신했을 때
+                conn.onmessage = evt => {
+                    console.log(evt.data);
+                    let message = evt.data;
+    
+                    logMessage(message)
+                    processMessage(message)
+                };
+            } else {
+                let log = document.createElement('div');
+                log.innerHTML = `<b>Your browser does not support WebSockets.</b>`;
+                logMessage(log)
+            }
+    
+        }
+    
+        // 화면 교체
+        function setView(element) {
+            while($show.hasChildNodes()) {
+                $hide.appendChild($show.firstChild);
+            }
+            $show.append(element);
+        }
+    
+        // 수신한 메시지 파싱 및 처리
+        function processMessage(message) {
+            message = JSON.parse(message)
+            if (message.target !== "kiosk") {
+                return false;
+            }
+    
+            // 응답 메시지인 경우
+            if (message.data === "ok") {
+                return false;
+            }
+    
+            // TODO - 임시 삭제
+            // respondMessage(message);
+    
+            message.data = JSON.parse(message.data);
+            switch (message.data.type) {
+                case 'view':
+                    let view = window[message.data.data];
+                    if (!view) {
+                        console.error("Cannot find view with id: " + message.data.data);
+                        return false;
+                    }
+                    setView(view);
+                    break
+                case 'alert':
+                    alert(message.data.data);
+            }
+        }
+    
+        // 응답 메시지 전송
+        function respondMessage(requestMessage) {
+            let responseMessage = {
+                id: requestMessage.id,
+                sender: requestMessage.target,
+                target: requestMessage.sender,
+                timestamp: new Date(),
+                data: "ok"
+            };
+            conn.send(JSON.stringify(responseMessage));
+        }
+    
+        // 이벤트 트리거 메시지 전송
+        function triggerEvent(eventName, eventData = null) {
+            let requestMessage = {
+                id: crypto.randomUUID(),
+                sender: "kiosk",
+                target: "event",
+                timestamp: new Date(),
+                data: JSON.stringify({
+                    event_name: eventName,
+                    event_data: eventData
+                })
+            };
+            conn.send(JSON.stringify(requestMessage));
+        }
+    
+        function createElementFromHtml(htmlString) {
+            const div = document.createElement('div');
+            div.innerHTML = htmlString.trim();
+            return div.firstElementChild;
+        }
+    
+        function logMessage(message) {
+            message = JSON.parse(message)
+            let background = message.data === 'ok' ? '' :
+                            message.sender === 'kiosk' ? 'bg-primary-subtle' : 'bg-danger-subtle';
+            let log = createElementFromHtml(`
+                        <li class="list-group-item ${background}">
+                            <div><b>sender</b>: ${message.sender} -> <b>target</b>: ${message.target}</div>
+                            <div><b>id</b>: ${message.id}</div>
+                            <div><b>timestamp</b>: ${message.timestamp.replace('T', ' ').slice(0, -5)}</div>
+                            <div><b>data</b>: ${message.data}</div>
+                        </li>
+                    `);
+    
+            $log.appendChild(log)
+            $log.scrollTop = $log.scrollHeight - $log.clientHeight
+        }
+    </script>
 </head>
 
+
 <!-- main page header -->
-<!-- <header id="main_header" class="main-header">
+<header id="main_header" class="main-header">
     <div class="header-wrap">
         <div class="header-area">
             <div class="header-left">
-                <div class="logo-box">
+                <!-- <div class="logo-box">
                     <h1 class="logo">
                         <a href="/">
                             <img src="" alt="">
                         </a>
                     </h1>
-                </div>
-                <div class="menu-box">
+                </div> -->
+                <!-- <div class="menu-box">
                     <ul class="gnb clear">
                         <li class="menu-item">
                             <a href="/company/company_information"><span>메뉴 아이템 1</span></a>
@@ -87,11 +205,11 @@
                         </li>
                         <li class="menu-item"><a href="/user/mypage"><span>마이페이지</span></a></li>
                     </ul>
-                </div>
+                </div> -->
             </div>
-            
+            <div class="header-right" style="margin: 30px;">대전 푸르지오 2차 101동 1-4라인</div>
         </div>
         <div class="hidden-layer dep2-bg"></div>
     </div>
-</header> -->
+</header>
 {{end}}
