--- a/websocketserver/views/main.html
+++ b/websocketserver/views/main.html
@@ -25,4 +25,11 @@
     </div>
 </body>
 </html>
+
+<script>
+    $input_item_btn.onclick = () => {
+        console.log("입고");
+        triggerEvent("DeliveryInfoRequested");
+    }
+</script>
 {{end}}
