--- a/webserver/views/input/regist_delivery.html
+++ b/webserver/views/input/regist_delivery.html
@@ -76,7 +76,8 @@
             if(res.data.status == 200){
                 location.href='/input/input_item'
             } else{
-                location.href='/input/regist_delivery_error'
+                alert("다시 입력하세요")
+                //location.href='/input/regist_delivery_error'
 
             }
             
