--- a/webserver/views/input/complete_input_item.html
+++ b/webserver/views/input/complete_input_item.html
@@ -12,10 +12,31 @@
         <div class="sub-con-sec">
             <div class="board-top-search" style="float: left;">
                 <p>택배 입고가 완료되었습니다.</p>
-                <button class="btn-small" id="home_btn" style="margin-top: 30px;"><a href="/">처음으로</a></button>
+                <p>추가 입고 하시겠습니까?</p>
+                <button class="btn-small" id="home_btn" style="margin-top: 30px;"><a href="/input/regist_delivery">예</a></button>
+                <button class="btn-small" id="home_btn" style="margin-top: 30px;"><a href="/">아니요</a></button>
+
             </div>
 
         </div>
     </div>
 </div>
+
+<script>
+    /* 입고 */
+    axios.post('/input/input').then(res => {
+        console.log(res.data);
+
+        if(res.data.status == 200){
+            location.href='/input/complete_input_item';
+        } else{
+            location.href='/input/input_item_error';
+        }
+        console.log("완료")
+         
+    }).catch(err => {
+        console.log(err);
+    });
+
+</script>
 {{end}}
