Develop: Add "Get Item List by Address"

--- a/webserver/views/output/regist_address.html
+++ b/webserver/views/output/regist_address.html
@@ -2,67 +2,46 @@
 {{template "header" .}}
 
 <div class="sub-right">
-    <h2 class="sub-right-title">수령인 정보 입력</h2>
     <div class="sub-right-con">
         <div class="sub-con-sec join-sec">
             <div class="form-wrap">
-                <div style="margin-bottom: 30px;">아래의 정보를 입력 혹은 입주민 카드를 태그하세요</div>
-                <form action="">
-                    <div class="input-item">
-                        <label for="address">귀하의 호수</label>
-                        <input type="text" id="address">
-                    </div>
-                </form>
+                <div style="margin-bottom: 30px;">아래의 정보를 입력하세요</div>
+                <div class="input-item">
+                    <label for="$address">귀하의 호수</label>
+                    <input type="text" id="$address">
+                </div>
             </div>
             <div class="btn-wrap">
-                <button class="btn-normal" id="user_regist_insert_btn"><a href="/output/item_list">입력완료</a></button><br><br>
-                <button class="btn-small" id="qna_search_btn"><a href="/">처음으로</a></button>
+                <button class="btn-normal" id="$submit_address_btn">입력 완료</button>
+                <button class="btn-small" id="$cancel_btn">처음으로</button>
             </div>
         </div>
     </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 
 <script>
 
-    // 입주민 정보 전송
-    function owner_info() {
-
-        let eventData = JSON.stringify({
-        address: $('#address').val(),
-        });
-
-        let request = {
-            targer: "event",
-            sender: "kiosk",
-            data: JSON.stringify({
-                event_name: "ItemInfoRequested",
-                event_data: eventData 
-            }),
-        };
-
-        if ($('#address').val() == '') {
+    $submit_address_btn.onclick = () => {
+        if ($address.value === '') {
             alert('주소를 입력해주세요.');
             return false;
         }
 
-        axios.post('/output/get_owner_info', request).then(res => {
-            // 유저의 물품 리스트 리턴
-            console.log(res.data)
-            alert('입력되었습니다.');
-            if(res.data == true){
-                location.href='/output/item_list'
-            } else{
-                location.href='/output/item_list_error'
-
+        axios.get('/output/check_item_exists?address=' + $address.value)
+        .then(axiosResult => {
+            let response = axiosResult.data;
+            location.replace(response);
+        })
+        .catch(err => {
+            if (err.response.status === 404) {
+                alert('보관된 택배가 없습니다.');
+            } else {
+                console.error(err);
             }
-            
-        }).catch(err => {
-            console.log(err);
         });
     }
-     
+
 </script>
 {{end}}
