수납 - 경고 팝업 및 error 알림 창 띄우기

--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -34,6 +34,7 @@
          
     }).catch(err => {
         console.log(err);
+        alert(err.response.data.error)
     });
 
 /* 입고 취소 or 처음으로 선택한 경우 제어서버에 stop 메시지 보내줘야함 */
