--- a/webserver/views/input/regist_delivery.html
+++ b/webserver/views/input/regist_delivery.html
@@ -72,6 +72,7 @@
 
         axios.post('/input/input_delivery_info', request).then(res => {
             console.log(res.data)
+            console.log(res.data.status)
             alert('입력되었습니다.');
             
             if(res.data.status == 200){
@@ -85,6 +86,7 @@
             
         }).catch(err => {
             console.log(err);
+            alert(err.response.data.error)
         });
     }
     
