--- a/webserver/views/input/regist_owner.html
+++ b/webserver/views/input/regist_owner.html
@@ -65,7 +65,8 @@
              }
              
          }).catch(err => {
-             console.log(err);
+            console.log(err);
+            alert(err.response.data.error)
          });
      }
      
