--- a/webserver/views/input/regist_delivery.html
+++ b/webserver/views/input/regist_delivery.html
@@ -18,7 +18,7 @@
                         <input type="text" id="address">
                     </div>
                     <div class="input-item">
-                        <label for="phone_num">기사님 연락처</label>
+                        <label for="phone_num">수령인 연락처</label>
                         <input type="text" id="phone_num">
                     </div>
                 </form>
