--- a/webserver/views/main.html
+++ b/webserver/views/main.html
@@ -47,7 +47,7 @@
         우려 물품은<br/>
         입고 자제<br/>
         바랍니다.<br/>
-    <a class="modal_close_btn" style="font-size:medium; font-weight: 300;">닫기</a>    
+    <a class="modal_close_btn" style="color:#fff ;text-decoration: none; font-size:medium; font-weight: 300;" href="input/regist_delivery">닫기</a>    
     </div>
 </body>
 </html>
@@ -107,7 +107,7 @@
         modal('my_modal');
         setTimeout(function(){
             location.href="input/regist_delivery"
-        }, 2000);
+        }, 1500);
     });
 </script>
 {{end}}
