--- a/webserver/views/input/cancel_input_item.html
+++ b/webserver/views/input/cancel_input_item.html
@@ -17,4 +17,10 @@
         </div>
     </div>
 </div>
+
+<script>
+    setTimeout(function(){
+        location.href='/';
+    }, 2000);
+</script>
 {{end}}
