--- a/webserver/views/output/item_list.html
+++ b/webserver/views/output/item_list.html
@@ -1,37 +1,40 @@
 {{define "output/item_list"}}
 {{template "header" .}}
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<link rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 
 <div class="main-page" style="display: none;">
     <!-- <div class="main-bg"></div>
     <div class="main-con"></div> -->
 </div>
 
-<div class="sub-right" ;style="background-color: white; display: ">
+<div class="sub-right" style="background-color: white;">
     <h2 class="sub-right-title">귀하의 호수</h2>
     <div id="address">
     </div>
-        <div class="sub-right-con">
+    <div class="sub-right-con">
         <div class="sub-con-sec">
-            <table style="border: 2px solid; width:100%; text-align: center;">
-                <thead id="thead">
+            <form action="/output/item_output_ongoing" method="post">
+                <table style="border: 2px solid; width:100%; text-align: center;">
+                    <thead id="$thead">
                     <tr>
                         <th style="padding: 10px;"><i class="fa fa-check"></i>선택</th>
                         <th style="padding: 10px;">택배사</th>
                         <th style="padding: 10px;">운송장 번호</th>
                         <th style="padding: 10px;">입고 일시</th>
                     </tr>
-                </thead>        
-                <tbody id="tbody">
-                </tbody>
-            </table>
-            <div class="board-top-search" style="float: left;">
-                <button class="btn-small" id="qna_search_btn"><a href="/output/complete_output_item">선택 찾기</a></button>
+                    </thead>
+                    <tbody id="$tbody">
+                    </tbody>
+                </table>
+                <div class="board-top-search" style="float: left;">
+                    <button type="button" class="btn-small" id="$output_request_btn">선택 찾기</button>
 
-                <button class="btn-small" id="qna_search_btn"><a href="/output/regist_address">이전으로</a></button>
-                <button class="btn-small" id="qna_search_btn"><a href="/">처음으로</a></button>
-            </div>
+                    <button type="button" class="btn-small" id="$back_btn"><a href="/output/regist_address">이전으로</a></button>
+                    <button type="button" class="btn-small" id="$home_btn"><a href="/">처음으로</a></button>
+                </div>
+            </form>
 
         </div>
     </div>
@@ -39,66 +42,51 @@
 
 
 <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const address = urlParams.get('address');
+
     // db에서 유저 호수와 택배 리스트 가져오기
-    axios.get('/output/get_item_list').then(res => {
-        console.log(res.data)
-        let item_list = res.data;
-        console.log(item_list.address)
-        let address = `<h2 class="sub-right-title" id="address">${item_list.address}호</h2>`
-      
-        let html_body = '';
-        console.log(item_list.item)
-        for(let i=0; i<item_list.item.length; i++){
-            html_body += `
-                <tr>
-                    <td><input type="checkbox" name="item_checkbox" value="${item_list.item[i]}"></td>
-                    <td>${item_list.item[i]}</td>
-                    <td>${item_list.item[i]}</td>
-                    <td>${item_list.item[i]}</td>
-                </tr>
-            `
-        
-            $('#tbody').html(html_body);
-            $('#address').html(address);
-        }
-    });
+    axios.get('/output/get_item_list?address=' + address)
+        .then(axiosResult => {
+            let itemListResponses = axiosResult.data.data;
+            console.log(itemListResponses);
+            itemListResponses.forEach(item => {
+                let tr = createElementFromHtml(`
+                    <table>
+                        <tr>
+                            <td>
+                                <input type="checkbox" name="item_id" value="${item.item_id}">
+                            </td>
+                            <td>${item.delivery_company}</td>
+                            <td>${item.tracking_number}</td>
+                            <td>${item.input_date}</td>
+                        </tr>
+                    </table>
+                `);
 
-    // 불출할 택배 정보 전송
-    function output_item_list() {
-
-        let checkboxArr=[];
-        $("input[name='item_checkbox']:checked").each(function(i){
-            checkboxArr.push($(this).val());
-             });
-        console.log(checkboxArr)
-        
-        let eventData = JSON.stringify({
-            item: checkboxArr,
+                $tbody.append(tr.querySelector('tr'));
+            });
+        })
+        .catch(err => {
+            console.error(err)
         });
 
-        let request = {
-            targer: "event",
-            sender: "kiosk",
-            data: JSON.stringify({
-                event_name: "ItemListSubmitted",
-                event_data: eventData 
-            }),
-        };
+    $output_request_btn.onclick = e => {
+        let $checkboxes = document.getElementsByName("item_id");
+        let nothingChecked = true;
+        $checkboxes.forEach(checkbox => {
+            if (checkbox.checked) {
+                nothingChecked = false;
+            }
+        })
 
-        if (checkboxArr.length == 0) {
-            alert('불출할 물품을 선택해주세요.');
+        if (nothingChecked) {
+            alert("찾을 물품을 하나 이상 선택해주세요.");
             return false;
         }
 
-        axios.post('/output/post_item_list', request).then(res => {
-            console.log(res.data)
-            if(res.data == true){
-                location.href='/output/complete_output_item'
-            } 
-        }).catch(err => {
-            console.log(err);
-        });
-    }
+        e.target.closest('form').submit();
+    };
 
 </script>
 {{end}}
