정리 로직 추가

--- a/webserver/views/main.html
+++ b/webserver/views/main.html
@@ -53,7 +53,20 @@
 </html>
 
 <script>
+    setTimeout(function(){
+        sort()
+    }, 3000);
+
+    // n 분간 동작하지 않을때 /입고나 찾기 버튼을 누르면 stop
+    function sort(){
+        axios.post('/sort').then(res => {
+            console.log(res.data)
+        })
+    }
     
+    
+
+
     function modal(id) {
         var zIndex = 9999;
         var modal = document.getElementById(id);
