--- a/webserver/views/input/regist_delivery.html
+++ b/webserver/views/input/regist_delivery.html
@@ -85,7 +85,9 @@
             
         }).catch(err => {
             console.log(err);
-            alert(err.response.data.error)
+            setTimeout(function(){
+                location.href='/input/input_item_error?error=' + err.response.data.error;
+            }, 5000);
         });
     }
     
