정리 - 반복실행 및 중단

--- a/webserver/views/input/regist_delivery.html
+++ b/webserver/views/input/regist_delivery.html
@@ -85,9 +85,10 @@
             
         }).catch(err => {
             console.log(err);
-            setTimeout(function(){
-                location.href='/input/input_item_error?error=' + err.response.data.error;
-            }, 5000);
+            alert(err.response.data.error)
+            //setTimeout(function(){
+            //    location.href='/input/input_item_error?error=' + err.response.data.error;
+            //}, 5000);
         });
     }
     
