Debug: Add output item password check

--- a/webserver/views/output/item_output_submit_password.html
+++ b/webserver/views/output/item_output_submit_password.html
@@ -1,4 +1,4 @@
-{{define "output/item_output_accept"}}
+{{define "output/item_output_submit_password"}}
 {{template "header" .}}
 
 <link rel="stylesheet"
@@ -26,19 +26,18 @@
     const itemId = url.searchParams.get("itemId");
 
     $submit_btn.onclick = () => {
-        axios.post('/output/item_output_takeout?itemId', {
-            item_id: itemId,
-            password: $password_input.value
+        axios.post('/output/item_output_check_password', {
+            item_id: parseInt(itemId),
+            password: parseInt($password_input.value),
         })
         .then(axiosResult => {
             let response = axiosResult.data;
             console.log(response);
         })
         .catch(err => {
+            alert('비밀번호가 올바르지 않습니다.');
             console.error(err);
         })
-
-
     }
 
     $cancel_btn.onclick = () => {
