--- a/webserver/views/output/item_list.html
+++ b/webserver/views/output/item_list.html
@@ -15,7 +15,7 @@
     </div>
     <div class="sub-right-con">
         <div class="sub-con-sec">
-            <form action="/output/item_output_ongoing" method="post">
+            <form action="/output/ongoing" method="post">
                 <table style="border: 2px solid; width:100%; text-align: center;">
                     <thead id="$thead">
                     <tr>
