--- a/webserver/views/output/item_output_confirm.html
+++ b/webserver/views/output/item_output_confirm.html
@@ -29,7 +29,7 @@
     const itemId = url.searchParams.get("itemId");
 
     $output_btn.onclick = () => {
-        window.location.replace('/output/item_output_submit_password?itemId=' + itemId);
+        window.location.replace('/output/password/submit?itemId=' + itemId);
     }
 
     $input_btn.onclick = () => {
