Debug: Fix resource.ReserveTable() function
- for문 continue -> break

--- a/webserver/views/output/item_output_submit_password.html
+++ b/webserver/views/output/item_output_submit_password.html
@@ -50,7 +50,7 @@
             .cache(err => {
                 console.error(err);
             })
-        window.location.replace('')
+        window.location.replace('/')
     }
 </script>
 {{end}}
