--- a/webserver/static/css/layout.css
+++ b/webserver/static/css/layout.css
@@ -1,6 +1,6 @@
 /* 헤더 */
 .mobile-header {display: none;}
-.header-wrap {position: relative; height: 82px; transition: .3s all ease-in-out; background-color: #b0b0b0;}
+.header-wrap {position: relative; height: 82px; transition: .3s all ease-in-out; background-color: #1B4B43;}
 .sub-header .header-wrap {background-color: #fff; border-bottom: 1px solid #f0f0f0;}
 .hidden-layer {display: none;}
 .dep2-bg {position: absolute; top: 82px; width: 100%; height: 150px; background-color: #fff; z-index: 0; border-top: 1px solid #f0f0f0; border-bottom: 1px solid #f0f0f0;}
