--- a/webserver/views/input/input_item.html
+++ b/webserver/views/input/input_item.html
@@ -14,7 +14,7 @@
                 <!-- <button class="btn-small" id="complete_btn"><a href="/input/regist_owner">입고 완료</a></button> -->
 
                 <button class="btn-small" id="cancle_btn" onclick="send_stop_info()">입고 취소</button>
-                <button class="btn-small" id="home_btn"><a href="/">처음으로</a></button>
+                <button class="btn-small" id="home_btn" onclick="send_stop_info()">처음으로</button>
             </div>
 
         </div>
@@ -29,11 +29,11 @@
         if(res.data.status == 200){
             // **제거
             setTimeout(function(){
-                location.href='/input/complete_input_item';
-            }, 5000);
+                location.replace(res.data.data);
+            }, 5000)
         } else{
-            console.log(err);
-            alert(err.response.data.error)
+            console.log(res.data.errpr);
+            alert(res.data.error)
         }
     }).catch(err => {
         console.log(err);
@@ -45,7 +45,7 @@
     /* 입고 취소 */
     function send_stop_info() {
         let request = JSON.stringify({
-            step: "1",
+            step: "2",
         });
 
         axios.post('/input/stop_input', request).then(res => {
@@ -55,7 +55,6 @@
             } else{
                 console.log(res.data.error)
                 alert(res.data.error)
-                //location.href='/input/regist_delivery_error'
             }
             
         }).catch(err => {
