--- a/webserver/views/input/regist_delivery.html
+++ b/webserver/views/input/regist_delivery.html
@@ -1,6 +1,41 @@
 {{define "input/regist_delivery"}}
 {{template "header" .}}
-
+<style>
+    #modal {
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgba(0, 0, 0, 0.4);
+        display: none;
+      }
+      .modal-content {
+        background-color: rgb(2, 26, 2);
+        margin: 15% auto;
+        padding: 100px 5px;
+        border: 1px solid #888;
+        width: 50%;
+        font-size: xx-large;
+        font-weight: bold;
+        text-align: center;
+        color: rgb(255, 174, 0);
+      }
+      .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+      }
+      .close:hover,
+      .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
+      }
+</style>
 <div class="sub-right">
     <h2 class="sub-right-title">물품기사 정보 입력</h2>
     <div class="sub-right-con">
@@ -25,11 +60,17 @@
             </div>
             <div class="btn-wrap">
                 <button class="btn-normal" id="delivery_regist_btn" onclick="send_delivery_info()">입력완료</button><br><br>
-                <button class="btn-small" id="home_btn"><a href="/">첫 화면으로</a></button>
+                <button class="btn-small" id="home_btn" onclick="send_stop_info()">첫 화면으로</button>
             </div>
         </div>
     </div>
 </div>
+
+<div id="modal">
+    <div class="modal-content">
+      <p>입고 준비중입니다. <br/> 잠시만 기다려주세요</p>
+    </div>
+  </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
@@ -47,7 +88,12 @@
         
             $('#delivery_company').html(list);
         }
+    }).catch(err => {
+        console.log(err);
+        alert(err)
     });
+
+    const modal = document.getElementById("modal");
 
     /* 배송 정보 전달 */
     function send_delivery_info() {
@@ -57,7 +103,6 @@
             address: $('#address').val(),
             phone_num: $('#phone_num').val(),
         });
-        console.log(request)
 
         if ($('#delivery_company').val() == '') {
             alert('소속회사를 입력해주세요.');
@@ -68,27 +113,47 @@
             return false;
         }
 
-        alert('입고를 준비중입니다.');
+        modal.style.display = "block";
+        document.body.style.overflow = "hidden";
 
         axios.post('/input/input_delivery_info', request).then(res => {
+
             console.log(res.data)
-            console.log(res.data.status)
             
             if(res.data.status == 200){
-                location.href='/input/input_item'
+                location.replace(res.data.data)
+            } else{
+                console.log(res.data.error)
+                alert(res.data.error)
+            }
+        }).catch(err => {
+            modal.style.display = "none";
+            document.body.style.overflow = "auto"; // 스크롤바 보이기
+            console.log(err);
+            alert(err.response.data.error)
+           
+        });
+    }
+
+    /* 입고 취소 */
+    function send_stop_info() {
+        let request = JSON.stringify({
+            step: "1",
+        });
+
+        axios.post('/input/stop_input', request).then(res => {
+            if(res.data.status == 200){
+                alert('입고를 취소하셨습니다.');
+                location.href='/'
             } else{
                 console.log(res.data.error)
                 alert(res.data.error)
                 //location.href='/input/regist_delivery_error'
-
             }
             
         }).catch(err => {
             console.log(err);
             alert(err.response.data.error)
-            //setTimeout(function(){
-            //    location.href='/input/input_item_error?error=' + err.response.data.error;
-            //}, 5000);
         });
     }
     
