--- a/webserver/views/output/item_output_password_form.html
+++ b/webserver/views/output/item_output_password_form.html
@@ -1,4 +1,4 @@
-{{define "output/item_output_submit_password"}}
+{{define "output/item_output_password_form"}}
 {{template "header" .}}
 
 <link rel="stylesheet"
@@ -42,7 +42,7 @@
     }
 
     $cancel_btn.onclick = () => {
-        axios.post('/output/item_output_return')
+        axios.post('/output/return')
             .then(axiosResult => {
                 let response = axiosResult.data;
                 console.log(response);
